--- a/marble-spiral-contact.html
+++ b/marble-spiral-contact.html
@@ -75,7 +75,7 @@
                 <div class="contact-icon">📍</div>
                 <div class="contact-text">
                   <h3>Address</h3>
-                  <p>1234 Main Street, Calgary, Alberta T2P 1J9, Canada</p>
+                  <p>101 9 Ave SW, Calgary, Alberta T2P 1J9, Canada</p>
                 </div>
               </div>
             </div>
@@ -131,14 +131,14 @@
         <h2>Find Us</h2>
         <div class="map-container">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20065.123456789!2d-114.0719!3d51.0447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53716e0f4f8b8b8b%3A0x1234567890abcdef!2s1234%20Main%20Street%2C%20Calgary%2C%20Alberta%20T2P%201J9%2C%20Canada!5e0!3m2!1sen!2sca!4v1640995200000!5m2!1sen!2sca"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20065.123456789!2d-114.0719!3d51.0447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53716e0f4f8b8b8b%3A0x1234567890abcdef!2s101%209%20Ave%20SW%2C%20Calgary%2C%20Alberta%20T2P%201J9%2C%20Canada!5e0!3m2!1sen!2sca!4v1640995200000!5m2!1sen!2sca"
             width="100%"
             height="450"
             style="border: 0"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
-            title="1234 Main Street, Calgary, Alberta T2P 1J9, Canada"
+            title="101 9 Ave SW, Calgary, Alberta T2P 1J9, Canada"
           >
           </iframe>
         </div>
